[package]
name = "wasmtest"
version = "0.1.0"
authors = ["aj0er <ajoeaar@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.59"
wasm-bindgen = "0.2.63"
image = "0.24.3"
nalgebra = {version="0.31.1", features=["serde-serialize"]}
nalgebra-glm = "0.17.0"

serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'Window',
  'KeyboardEvent',
  'MouseEvent'
]

[profile.release]
opt-level = "s"
